.k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nurio-me-service
  namespace: nurio-me
spec:
  selector:
    app: nurio-me
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
