.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nurio-me-ingress
  namespace: nurio-me
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cert-manager
spec:
  rules:
    - host: nurio.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nurio-me-service
                port:
                  number: 80
  tls:
    - hosts:
        - nurio.me
      secretName: nurio-me-tls
